--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -28,7 +28,7 @@ body {
 
 section {
     width: 100%;
-    max-width: 420px;
+    max-width: 400px;
     min-height: 400px;
     display: flex;
     flex-direction: column;
@@ -52,6 +52,7 @@ a, a:visited {
 
 input[type="text"],
 input[type="password"],
+input[type="email"], 
 button,
 textarea {
   font-family: 'Nunito', sans-serif;
