--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -8,7 +8,7 @@
 
 html {
     font-family: 'Nunito', sans-serif;
-    font-size: 22px;
+    font-size: 18px;
     color: #fff;
 }
 
@@ -33,7 +33,7 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 1rem;
+    padding: 0.75rem;
     border: 1px solid black;
     background-color: rgb(255, 255, 255);
 }
@@ -57,14 +57,14 @@ button,
 textarea {
   font-family: 'Nunito', sans-serif;
   font-size: 22px;
-  padding: 0.25rem;
+  /* padding: 0.25rem; */
   border-radius: 0.5rem;
   
 }
 
 label,
 button {
-  margin-top: 1rem;
+  margin-top: 0.25rem;
   
 }
 
