--- a/src/Login.css
+++ b/src/Login.css
@@ -38,7 +38,7 @@ section {
     background-color: rgb(255, 255, 255);
 }
 
-form {
+.login_form {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
