--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,6 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
+  card-text:hover {
+    background-color: black;
+}
